# studio

./: ARCHITECTURE.md  CMakeLists.txt  README.md  index.html  lancer.bat  main.cpp  package-lock.json  package.json  tailwind.config.ts  vercel.json
backend/: main.py  requirements.txt
docs/: blueprint.md
frontend/: index.html
remover-sticker/: buildozer.spec  gen_guide.py  main.py  remover.kv
src/ai/: dev.ts
src/ai/flows/: ai-moderation.ts  ai-suggest-feedback.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/africoins/: page.tsx
src/app/africoins/payment/: page.tsx
src/app/africoins/payment/success/: page.tsx
src/app/choose-profile/: page.tsx
src/app/dashboard/: page.tsx
src/app/drafts/: page.tsx
src/app/forgot-password/: page.tsx
src/app/forgot-password/sent/: page.tsx
src/app/forum/: page.tsx
src/app/login/: page.tsx
src/app/onboarding/artist/: page.tsx
src/app/onboarding/reader/: page.tsx
src/app/profile/: page.tsx
src/app/read/: page.tsx
src/app/shop/: page.tsx
src/app/signup/: page.tsx
src/app/trending/: page.tsx
src/app/workshops/: page.tsx
src/components/: icons.tsx
src/components/layout/: footer.tsx  header.tsx
src/components/pages/home/: category-chips.tsx  community-spotlight.tsx  creator-promo.tsx  hero-section.tsx  story-card.tsx  story-carousel.tsx
src/lib/: data.ts  placeholder-images.json
